        going forward all MCPL builds will be able to produce and read with
        gzipped MCPL files. Accordingly, the MCPL_ENABLE_ZLIB flag will now only
        have the options: USEPREINSTALLED, FETCH and DEFAULT. The DEFAULT value
        will in general imply USEPREINSTALLED, except on WINDOWS where it will
        imply FETCH.

v1.6.2 2023-06-06
      * Work again with latest numpy by removing usage of deprecated numpy.float
        and numpy.int aliases (Thanks Milan Klausz and Jose Robledo, see also
        github issue #72).

v1.6.1 2022-12-08
      * Fixed mcplexample_pyread so it is able to work without the user setting
        PYTHONPATH (this is still not very robust as it for now assumes that the
        user did not modify the default installation location).
      * Attempt to improve MCPL_ENABLE_ZLIB=FETCH mode by applying correct
        private compilation definitions.

v1.6.0 2022-11-11
      * Updated all MCPL CMake options to have named prefixed with MCPL_ and use
        a more consistent naming scheme (mctools/mcpl#67). For example
        BUILD_EXAMPLES is now instead MCPL_ENABLE_EXAMPLES. See the file
        cmake/modules/mcpl_options.cmake for details.
      * The default behaviour was until now to try to locate ZLIB and let the
        configuration fail if not succesful, unless the old option
        BUILD_WITHZLIB was explicitly set to OFF. The new option
        MCPL_ENABLE_ZLIB is more flexible and supports one of several values:
        IFAVAILABLE, FETCH, USEPREINSTALLED, ALWAYS, OFF, or NEVER.  The default
        value of IFAVAILABLE will try to locate ZLIB, but will simply disable
        ZLIB support if unsuccesful. The aliased options OFF and NEVER are
        obviously simply disabling ZLIB support irrespective of presence on the
        system. The option ALWAYS will attempt to find ZLIB on the system, and
        if it fails it will instead fetch the zlib sources from the official