@@ -41,9 +41,6 @@ get_filename_component( MCPL_INCDIR "${MCPL_CMAKEDIR}/@MCPL_relpath_CMAKEDIR2INC
 
 #Fixme: find dependency: zlib ??
 
-#Config variables:
-set( MCPL_OPTION_MODIFY_RPATH       @MODIFY_RPATH@ )
-
 #Libname:
 set( MCPL_LIBNAME @MCPL_libname@ )
 
