@@ -29,11 +29,6 @@ function( mcplcfgapp_create_mcplconfig_h targetfile expects_shlibdir_override )
   else()
     set( mcplcfgapp_expect_shlibdir_override_01 "0" )
   endif()
-  if ( NCRYSTAL_MODIFY_RPATH )
-    set( mcplcfgapp_has_modrpath_01 "1" )
-  else()
-    set( mcplcfgapp_has_modrpath_01 "0" )
-  endif()
   if ( UNIX )
     set( MCPL_libname_genexp "$<TARGET_FILE_NAME:mcpl>" )
     set( MCPL_shlibname_genexp "$<TARGET_FILE_NAME:mcpl>" )
