@@ -12,6 +12,7 @@ v1.9.80 (work in progress)
         have the options: USEPREINSTALLED, FETCH and DEFAULT. The DEFAULT value
         will in general imply USEPREINSTALLED, except on WINDOWS where it will
         imply FETCH.
+      * Many obsolete CMake options were changed or simply removed.
 
 v1.6.2 2023-06-06
       * Work again with latest numpy by removing usage of deprecated numpy.float
